# dopamine

./: CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  process.rs
crates/core/src/macos/: cf.rs  mod.rs
ui/: package-lock.json  package.json
ui/src-tauri/: Cargo.toml  tauri.conf.json
