[workspace]
resolver = "3"
members = ['crates/*']

[workspace.package]
edition = "2024"

[workspace.dependencies]
dopamine-core = { version = "0.1.0", path = "./crates/core" }

clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
