[workspace]
resolver = "3"
members = ['crates/*']

[workspace.package]
edition = "2024"

[workspace.dependencies]
dopamine-core = { version = "0.1.0", path = "./crates/core" }

clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
duration-str = "0.21.0"

[workspace.lints.rust]
missing_debug_implementations = "warn"
unused_qualifications = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
